--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Build Docker Container for Raspberry Pi
         shell: bash
-        run: docker build -t "ghcr.io/nano-dna-studios/classbackupwebsite-pi:build" --platform linux/arm/v8 .
+        run: docker build -t "ghcr.io/nano-dna-studios/classbackupwebsite-pi:build" --platform linux/arm64/v8 .
 
   upload-website:
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
