--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,11 @@ jobs:
 
       - name: Build Docker Container for Raspberry Pi
         shell: bash
-        run: docker buildx build --platform linux/arm64/v8 -t "ghcr.io/nano-dna-studios/classbackupwebsite-pi:build" .
+        run: docker buildx build --platform linux/arm64/v8 -t "ghcr.io/nano-dna-studios/classbackupwebsite-pi:build" --output type=docker,dest=classbackupwebsite-pi.tar .
+
+      - name: Load Docker Image for Raspberry Pi
+        shell: bash
+        run: docker load -i classbackupwebsite-pi.tar
 
   upload-website:
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
